[package]
name = "padington-server"
version = "0.1.0"
authors = ["Xiphoseer"]
edition = "2018"

[features]
capture-spantrace = []
default = ["capture-spantrace"]

[dependencies]
color-eyre = "0.3"
derive-new = "0.5"
displaydoc = "0.1.6"
env_logger = "0.7"
eyre = "0.4"
log = "0.4"
serde_json = "1.0.53"
slug = "0.1"
structopt = "0.3.14"
thiserror = "1.0"
tokio-tungstenite = "0.10.1"
tokio-rustls = "0.13"
toml = "0.5.6"
tracing = "0.1"
tracing-error = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tungstenite = "0.10.1"
urlencoding = "1.0"

[dependencies.prosemirror]
#path = "../prosemirror"
git = "https://github.com/xiphoseer/prosemirror-rs"
branch = "main"
version = "0.1"
features = ["cmark"]

[dependencies.serde]
version = "1.0.97"
features = ["derive"]

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["async-await", "sink", "std"]

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["io-util", "time", "stream", "macros", "sync", "fs"]
