[package]
name = "padington-server"
version = "0.1.0"
authors = ["Xiphoseer"]
edition = "2018"

[features]
tls = ["tokio-rustls", "tokio-tungstenite/rustls-tls"]
default = ["tls"]

[dependencies]
cfg-if = "1"
color-eyre = "0.5"
derive-new = "0.5"
displaydoc = "0.1.6"
env_logger = "0.7"
pin-project = "1.0"
serde_json = "1.0.53"
slug = "0.1"
structopt = "0.3.14"
thiserror = "1.0"
tokio-stream = { features = ["sync"], version = "0.1" }
tokio-tungstenite = "0.14"
tokio-rustls = { optional = true, version = "0.22" }
toml = "0.5.6"
tracing = "0.1"
tracing-error = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tungstenite = { version = "0.13", default-features = false }
urlencoding = "1.0"

[dependencies.prosemirror]
#path = "../prosemirror"
git = "https://github.com/xiphoseer/prosemirror-rs"
branch = "main"
version = "0.1"
features = ["cmark"]

[dependencies.serde]
version = "1.0.97"
features = ["derive"]

[dependencies.futures-util]
version = "0.3.15"
default-features = false
features = ["async-await", "sink", "std", "async-await-macro"]

[dependencies.tokio]
version = "1.6"
default-features = false
features = ["rt-multi-thread", "io-util", "time", "macros", "sync", "fs", "signal"]
